[#596] Format Java source code with new settings
* It uses the Android formatter preferences